[gd_scene load_steps=6 format=3 uid="uid://pjkkv5x1uj5b"]

[ext_resource type="Theme" uid="uid://dqjc75de0xc2f" path="res://ui/main_menu/main.tres" id="1_y8d6d"]
[ext_resource type="Script" uid="uid://mlado5d136al" path="res://ui/network_lobby/network_lobby.gd" id="2_k4wnt"]
[ext_resource type="PackedScene" uid="uid://calr6s05fsd3t" path="res://ui/network_lobby/player_container.tscn" id="3_k4wnt"]
[ext_resource type="Texture2D" uid="uid://c568lbwb4bppy" path="res://icon.svg" id="3_w78nl"]
[ext_resource type="Script" uid="uid://dut20beqoi87c" path="res://ui/error_panel.gd" id="4_nrgoq"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_y8d6d")
script = ExtResource("2_k4wnt")
_player_container = ExtResource("3_k4wnt")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VSplitContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 225

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="MapSelectLabel" type="Label" parent="VBoxContainer2/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Select Level"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2/VBoxContainer/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="MapPreview" type="ItemList" parent="VBoxContainer2/VBoxContainer/VBoxContainer2/ScrollContainer/CenterContainer"]
layout_mode = 2
auto_width = true
auto_height = true
item_count = 3
max_columns = 6
same_column_width = true
icon_mode = 0
item_0/text = "Basic"
item_0/icon = ExtResource("3_w78nl")
item_1/text = "Castle"
item_1/icon = ExtResource("3_w78nl")
item_2/text = "Space"
item_2/icon = ExtResource("3_w78nl")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="GameSettings" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="AddPlayerButton" type="Button" parent="VBoxContainer2/VBoxContainer/VBoxContainer/GameSettings"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Add new local player (not available yet)"
disabled = true
text = "Add Player"

[node name="MaximumPlayersLabel" type="Label" parent="VBoxContainer2/VBoxContainer/VBoxContainer/GameSettings"]
visible = false
layout_mode = 2
text = "Maximum players"

[node name="MaxPlayerCount" type="SpinBox" parent="VBoxContainer2/VBoxContainer/VBoxContainer/GameSettings"]
visible = false
layout_mode = 2
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="ConnectedPlayersContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="VBoxContainer2/VBoxContainer/VBoxContainer"]
spawn_path = NodePath("../ConnectedPlayersContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="LeaveButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Leave Lobby"

[node name="ReadyButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Ready"

[node name="StartGameButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Start"

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.706
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.320007
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="TextureRect" type="TextureRect" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture = ExtResource("3_w78nl")

[node name="TextureRect2" type="TextureRect" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture = ExtResource("3_w78nl")

[node name="TextureRect3" type="TextureRect" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture = ExtResource("3_w78nl")

[node name="TextureRect4" type="TextureRect" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture = ExtResource("3_w78nl")

[node name="ErrorPanel" type="PopupPanel" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(529, 104)
script = ExtResource("4_nrgoq")

[node name="VBoxContainer" type="VBoxContainer" parent="ErrorPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 525.0
offset_bottom = 100.0

[node name="ErrorLabel" type="Label" parent="ErrorPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "An error occured! Back to Main Menu!"

[node name="Button" type="Button" parent="ErrorPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "OK"
